# edge_computing

./: .gitignore
ONNX/: main.py  pyproject.toml
openCV/: pyproject.toml
project/: README.md  base_model.py  benchmark.py  camera_source.py  coco_labels.py  coco_labels_dict.py  model_selection.py  pyproject.toml  rpicam.py  run_webcam_benchmark.py  temp.py  testing.txt  webcam.py
project/models/: efficientdet_decoder.py  rf_detr_decoder.py  ssd_mobilenet_decoder.py  yolo_decoder.py
yolo/: pyproject.toml  test.py
yolo/yolo11n_ncnn_model/: metadata.yaml
